--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 <body>
   <div id="root"></div>
   <div id="portal-root"></div>
+  <form name="contact" netlify hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
