--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+
+  <meta name="title" content="Llamazares Nicolás | Portfolio" />
+  <meta name="description" content="Desarrollador frontend con proyectos en React, TypeScript, Tailwind y más." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://llamazares-nicolas.netlify.app/" />
+  <meta property="og:title" content="Llamazares Nicolás - Software Developer" />
+  <meta property="og:description"
+    content="Desarrollador frontend con proyectos en React, TypeScript, Tailwind y más." />
+  <meta property="og:image" content="https://i.postimg.cc/3xr8PVx4/Avatar-Laptop-Background.webp" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="https://i.postimg.cc/3xr8PVx4/Avatar-Laptop-Background.webp" />
+  <meta property="twitter:url" content="https://llamazares-nicolas.netlify.app/" />
+  <meta property="twitter:title" content="Llamazares Nicolás - Software Developer" />
+  <meta property="twitter:description"
+    content="Desarrollador frontend con proyectos en React, TypeScript, Tailwind y más." />
+  <meta property="twitter:image" content="https://i.postimg.cc/3xr8PVx4/Avatar-Laptop-Background.webp" />
+
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
